...
            app:layout_constraintBottom_toBottomOf="@id/edit_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/edit_icon"
            app:layout_constraintTop_toTopOf="@id/edit_icon" />

        <View
            android:id="@+id/edit"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="?attr/selectableItemBackground"
            app:layout_constraintBottom_toBottomOf="@id/edit_icon"
            app:layout_constraintEnd_toEndOf="@id/edit_text"
            app:layout_constraintStart_toStartOf="@id/edit_icon"
...
            app:layout_constraintBottom_toBottomOf="@id/delete_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/edit_icon"
            app:layout_constraintTop_toTopOf="@id/delete_icon" />

        <View
            android:id="@+id/delete"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="?attr/selectableItemBackground"
            app:layout_constraintBottom_toBottomOf="@id/delete_icon"
            app:layout_constraintEnd_toEndOf="@id/delete_text"
            app:layout_constraintStart_toStartOf="@id/delete_icon"
...
